# Rv1126_YOLOv5-Lite

./: .gitignore  README.md  dataset.txt  simplify.onnx  simplify2.onnx  test.py
RKNN_Cpp/rknn_yolo_demo/: CMakeLists.txt  build.sh
RKNN_Cpp/rknn_yolo_demo/install/rknn_yolo_demo/: rknn_yolo_demo
RKNN_Cpp/rknn_yolo_demo/install/rknn_yolo_demo/model/: yolov5.rknn
RKNN_Cpp/rknn_yolo_demo/src/: drm_func.c  main.cc  rga_func.c
